Stampo sul html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <main>
-
+    <span>La tua età<p id="eta"></p></span>
+    <span>I tuoi km: <p id="km"></p></span>
+    <span> Il costo del tuo biglietto:<p id="biglietto"></p></span>
   </main>
 
   <script src="./assets/js/main.js" charset="utf-8"></script>
