Inserimento CSS e simbolo euro

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
   <main>
-    <span>La tua età<p id="eta"></p></span>
-    <span>I tuoi km: <p id="km"></p></span>
-    <span> Il costo del tuo biglietto:<p id="biglietto"></p></span>
+    <div class="ticket">
+      <span>La tua età<p id="eta"></p></span>
+      <span>I tuoi km: <p id="km"></p></span>
+      <span> Il costo del tuo biglietto:<p id="biglietto"></p></span>
+    </div>
   </main>
 
   <script src="./assets/js/main.js" charset="utf-8"></script>
