--- a/index.html
+++ b/index.html
@@ -5,14 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Biglietto</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/master.css">
 </head>
 <body>
+
+  <header>
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#"><img id="logo" src="./assets/img/logo.svg" alt=""></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li>LE FRECCE</li>
+            <li>ALTRI TRENI</li>
+            <li>TRASPORTO REGIONALE</li>
+            <li>OFFERTE E SERVIZI</li>
+            <li>CARTA FRECCIA</li>
+            <li>INFO E ASSISTENZA</li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </header>
   <main>
-    <div class="ticket">
-      <span>La tua età<p id="eta"></p></span>
-      <span>I tuoi km: <p id="km"></p></span>
-      <span> Il costo del tuo biglietto:<p id="biglietto"></p></span>
+    <div class="container">
+      <div class="ticket">
+        <span>La tua età<p id="eta"></p></span>
+        <span>I tuoi km: <p id="km"></p></span>
+        <span> Il costo del tuo biglietto:<p id="biglietto"></p></span>
+      </div>
     </div>
   </main>
 
