modifiche grafica trenitalia

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li>LE FRECCE</li>
-            <li>ALTRI TRENI</li>
-            <li>TRASPORTO REGIONALE</li>
-            <li>OFFERTE E SERVIZI</li>
-            <li>CARTA FRECCIA</li>
-            <li>INFO E ASSISTENZA</li>
+            <li><a href="">LE FRECCE</a></li>
+            <li><a href="">ALTRI TRENI</a></li>
+            <li><a href="">TRASPORTO REGIONALE</a></li>
+            <li><a href="">OFFERTE E SERVIZI</a></li>
+            <li><a href="">CARTA FRECCIA</a></li>
+            <li><a href="">INFO E ASSISTENZA</a></li>
           </ul>
         </div>
       </nav>
